# centaurengine

./: CMakeLists.txt  Consideration.cpp  Context.cpp  Decision.cpp  Intelligence.cpp  IntelligenceLoader.cpp  ModuleInterface.cpp  README.md  centaurtest.cpp  log.txt  qiproject.xml
Config/: demo.xml  settings.xml
Include/: Consideration.h  Context.h  Decision.h  Intelligence.h  IntelligenceLoader.h  ModuleInterface.h
Modules/: DemoInputModule.cpp  DemoInputModule.h  DemoOutputModule.cpp  DemoOutputModule.h
